--- a/README.adoc
+++ b/README.adoc
@@ -16,6 +16,95 @@ This project has two main modules:
 
 . Code generation module which generates runtime handler(s) from given `protobuf` definition.
 
+== Adding gRPC-Rest-Gateway annotation to a protobuf file
+
+Each RPC must define the HTTP method and path using the https://buf.build/googleapis/googleapis/file/main:google/api/http.proto[google.api.http] annotation, which can be done by importing https://buf.build/googleapis/googleapis/file/main:google/api/annotations.proto[google/api/annotations.proto].
+
+So for the following RPC:
+
+[source, protobuf]
+----
+rpc GetRequest (rest_gateway_test.api.model.TestRequestB) returns (rest_gateway_test.api.model.TestResponseB)
+----
+
+can be mapped to HTTP `GET /restgateway/test/testserviceb` by adding the following annotation:
+
+[source, protobuf]
+----
+rpc GetRequest (rest_gateway_test.api.model.TestRequestB) returns (rest_gateway_test.api.model.TestResponseB) {
+    option (google.api.http) = {
+      get: "/restgateway/test/testserviceb"
+    };
+}
+----
+
+The detail mapping between RPC and HTTP method can be found https://buf.build/googleapis/googleapis/file/main:google/api/http.proto[here].
+
+=== Extension to the standard Google http annotations to configure HTTP status codes
+
+Standard Google http annotations don't provide a way to configure HTTP status code, default HTTP status code is mapped to `200 OK`. The gRPC-rest gateway provides its own annotation to configure HTTP status code other than `200 OK`.
+
+The following is definition of annotation:
+
+[source, protobuf]
+----
+syntax = "proto3";
+
+import "scalapb/scalapb.proto";
+import "google/protobuf/descriptor.proto";
+
+package grpc_rest_gateway.api;
+
+option java_multiple_files = false;
+option java_package = "com.improving.grpc_rest_gateway.api";
+option java_outer_classname = "GrpcRestGatewayProto";
+
+option (scalapb.options) = {
+  flat_package: true
+  single_file: true
+  retain_source_code_info: true
+  preserve_unknown_fields: false
+  package_name: "com.improving.grpc_rest_gateway.api"
+};
+
+message StatusDescription {
+  int32 status = 1; // Valid HTTP status code
+  string description = 2; // optional, description of given status
+}
+
+message Statuses {
+  StatusDescription successStatus = 1; // Default success status, default value is '200'
+  repeated StatusDescription otherStatus = 2; // Other status and their descriptions, this will be used in OpenApi documentation
+}
+
+extend google.protobuf.MethodOptions {
+  Statuses statuses = 50000;
+}
+----
+
+The following definition will configure default status to `204 NoContent`.
+
+[source,protobuf]
+----
+option (grpc_rest_gateway.api.statuses) = {
+      successStatus: {
+        status: 204 // returns default status of No Content (204)
+        description: "Update resource"
+      },
+      // documentation of other statuses
+      otherStatus: [
+        {
+          status: 400
+          description: "Bad request"
+        },
+        {
+          status: 404
+          description: "Not found"
+        }
+      ]
+};
+----
+
 == Runtime implementations
 
 Three different implementations are provided for a runtime library:
@@ -34,7 +123,7 @@ There are three main classes in each runtime implementation along with server cl
 
 === Configure plugin for compiler fo code generation
 
-To generate Scala classes for gateway handler and OpenApi documentation add following in `plugin.sbt`:
+To generate Scala classes for gateway handler and OpenApi documentation, add following in `plugin.sbt`:
 
 [source, sbt, subs="normal,attributes"]
 ----
@@ -89,7 +178,10 @@ libraryDependencies ++= Seq(
   "com.thesamet.scalapb" %% "scalapb-runtime-grpc" % ScalaPb,
   "io.grpc" % "grpc-netty" % GrpcJava,
   "com.thesamet.scalapb" %% "scalapb-json4s" % ScalaPbJson,
-  "com.thesamet.scalapb.common-protos" %% "proto-google-common-protos-scalapb_0.11" % "2.9.6-0" % "compile,protobuf"
+  "com.thesamet.scalapb.common-protos" %% "proto-google-common-protos-scalapb_0.11" % "2.9.6-0" % "compile,protobuf",
+  // optional if using custom annotation
+  "io.github.sfali23" %% "grpc-rest-gateway-annotations" % AppVersion,
+  "io.github.sfali23" %% "grpc-rest-gateway-annotations" % AppVersion % "protobuf"
 )
 ----
 
@@ -114,7 +206,10 @@ lazy val root = project
         "org.apache.pekko" %% "pekko-stream-typed" % "1.1.2",
         "org.apache.pekko" %% "pekko-http" % "1.1.0",
         "org.apache.pekko" %% "pekko-grpc-runtime" % "1.1.1",
-        "com.thesamet.scalapb.common-protos" %% "proto-google-common-protos-scalapb_0.11" % "2.9.6-0" % "compile,protobuf"
+        "com.thesamet.scalapb.common-protos" %% "proto-google-common-protos-scalapb_0.11" % "2.9.6-0" % "compile,protobuf",
+        // optional if using custom annotation
+        "io.github.sfali23" %% "grpc-rest-gateway-annotations" % AppVersion,
+        "io.github.sfali23" %% "grpc-rest-gateway-annotations" % AppVersion % "protobuf"
       ),
       pekkoGrpcGeneratedSources := generatedSource,
       pekkoGrpcCodeGeneratorSettings := Seq("grpc", "single_line_to_proto_string"),
@@ -158,7 +253,9 @@ package rest_gateway_test.api;
 
 import "scalapb/scalapb.proto";
 import "google/api/annotations.proto";
+import "google/protobuf/empty.proto";
 import "common.proto";
+import "grpc_rest_gateway/api/annotations.proto";
 
 option java_multiple_files = false;
 option java_package = "rest_gateway_test.api.java_api";
@@ -186,6 +283,31 @@ service TestServiceB {
     option (google.api.http) = {
       post: "/restgateway/test/testserviceb"
       body: "*"
+    };
+  }
+
+  rpc Update (rest_gateway_test.api.model.TestRequestB) returns (google.protobuf.Empty) {
+    option (google.api.http) = {
+      put: "/restgateway/test/testserviceb/update"
+      body: "*"
+    };
+
+    option (grpc_rest_gateway.api.statuses) = {
+      successStatus: {
+        status: 204 // returns default status of No Content (204)
+        description: "Update resource"
+      },
+      // documentation of other statuses
+      otherStatus: [
+        {
+          status: 400
+          description: "Bad request"
+        },
+        {
+          status: 404
+          description: "Not found"
+        }
+      ]
     };
   }
 }
@@ -222,6 +344,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/TestResponseB"
+        default:
+          description: Unexpected error
     post:
       tags:
         - Process
@@ -238,6 +362,27 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/TestResponseB"
+        default:
+          description: Unexpected error
+  /restgateway/test/testserviceb/update:
+    put:
+      tags:
+        - Update
+      description: Generated from Update
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/TestRequestB"
+      responses:
+        "204":
+          description: Update resource
+        "400":
+          description: Bad request
+        "404":
+          description: Not found
+        default:
+          description: Unexpected error
 components:
   schemas:
     TestRequestB:
@@ -277,7 +422,6 @@ import io.netty.handler.codec.http.{HttpMethod, QueryStringDecoder}
 import com.improving.grpc_rest_gateway.runtime
 import runtime.core.*
 import runtime.handlers.*
-import rest_gateway_test.api.model.TestRequestB
 
 import scala.concurrent.{ExecutionContext, Future}
 import scala.util.Try
@@ -285,50 +429,60 @@ import scala.util.Try
 object TestServiceBGatewayHandler {
   private val GetGetRequestPath = "/restgateway/test/testserviceb"
   private val PostProcessPath = "/restgateway/test/testserviceb"
+  private val PutUpdatePath = "/restgateway/test/testserviceb/update"
 
   def apply(channel: ManagedChannel)(implicit ec: ExecutionContext): TestServiceBGatewayHandler =
     new TestServiceBGatewayHandler(channel)
 }
 
 class TestServiceBGatewayHandler(channel: ManagedChannel)(implicit ec: ExecutionContext)
-    extends GrpcGatewayHandler(channel)(ec) {
+  extends GrpcGatewayHandler(channel)(ec) {
   import TestServiceBGatewayHandler.*
   override val serviceName: String = "TestServiceB"
   override val specificationName: String = "TestServiceB"
-  private val client = TestServiceBGrpc.stub(channel)
+  private lazy val client = TestServiceBGrpc.stub(channel)
   override protected val httpMethodsToUrisMap: Map[String, Seq[String]] = Map(
     "GET" -> Seq(
       GetGetRequestPath
     ),
     "POST" -> Seq(
       PostProcessPath
+    ),
+    "PUT" -> Seq(
+      PutUpdatePath
     )
   )
 
-  override protected def dispatchCall(method: HttpMethod, uri: String, body: String): Future[GeneratedMessage] = {
+  override protected def dispatchCall(method: HttpMethod, uri: String, body: String): Future[(Int, GeneratedMessage)] = {
     val queryString = new QueryStringDecoder(uri)
     val path = queryString.path
     val methodName = method.name
     if (isSupportedCall(HttpMethod.GET.name, GetGetRequestPath, methodName, path))
-      dispatchGetRequest(mergeParameters(GetGetRequestPath, queryString))
+      dispatchGetRequest(200, mergeParameters(GetGetRequestPath, queryString))
     else if (isSupportedCall(HttpMethod.POST.name, PostProcessPath, methodName, path))
-      dispatchProcess(body)
+      dispatchProcess(200, body)
+    else if (isSupportedCall(HttpMethod.PUT.name, PutUpdatePath, methodName, path))
+      dispatchUpdate(204, body)
     else Future.failed(GatewayException.toInvalidArgument(s"No route defined for $methodName($path)"))
   }
 
-  private def dispatchGetRequest(parameters: Map[String, Seq[String]]) = {
+  private def dispatchGetRequest(statusCode: Int, parameters: Map[String, Seq[String]]) = {
     val input = Try {
       val requestId = parameters.toLongValue("requestId")
-      TestRequestB(requestId = requestId)
+      rest_gateway_test.api.model.TestRequestB(requestId = requestId)
     }
-    toResponse(input, client.getRequest)
+    toResponse(input, client.getRequest, statusCode)
   }
 
-  private def dispatchProcess(body: String) = {
-    val input = parseBody[TestRequestB](body)
-    toResponse(input, client.process)
+  private def dispatchProcess(statusCode: Int, body: String) = {
+    val input = parseBody[rest_gateway_test.api.model.TestRequestB](body)
+    toResponse(input, client.process, statusCode)
   }
 
+  private def dispatchUpdate(statusCode: Int, body: String) = {
+    val input = parseBody[rest_gateway_test.api.model.TestRequestB](body)
+    toResponse(input, client.update, statusCode)
+  }
 }
 ----
 
@@ -344,7 +498,6 @@ package rest_gateway_test.api.scala_api
 import com.improving.grpc_rest_gateway.runtime
 import runtime.core._
 import runtime.handlers.GrpcGatewayHandler
-import rest_gateway_test.api.model.TestRequestB
 
 import org.apache.pekko
 import pekko.grpc.GrpcClientSettings
@@ -355,27 +508,38 @@ import pekko.http.scaladsl.server.Directives._
 import scala.concurrent.ExecutionContext
 import scala.util.Try
 
-class TestServiceBGatewayHandler(settings: GrpcClientSettings)(implicit sys: ClassicActorSystemProvider)
-    extends GrpcGatewayHandler {
+class TestServiceBGatewayHandler(settings: GrpcClientSettings)(implicit sys: ClassicActorSystemProvider) extends GrpcGatewayHandler {
 
   private implicit val ec: ExecutionContext = sys.classicSystem.dispatcher
-  private val client = TestServiceBClient(settings)
+  private lazy val client = TestServiceBClient(settings)
   override val specificationName: String = "TestServiceB"
 
   override val route: Route = handleExceptions(exceptionHandler) {
-    pathPrefix("restgateway") {
-      pathPrefix("test") {
-        pathPrefix("testserviceb") {
-          pathEnd {
+      pathPrefix("restgateway") {
+        pathPrefix("test") {
+          pathPrefix("testserviceb") {
             concat(
-              get {
-                parameterMultiMap { queryParameters =>
-                  dispatchGetRequest(queryParameters)
-                }
+              pathEnd {
+                concat(
+                  get {
+                    parameterMultiMap { queryParameters =>
+                      dispatchGetRequest(200, queryParameters)
+                    }
+                  },
+                  post {
+                    entity(as[String]) { body =>
+                      dispatchProcess(200, body)
+                    }
+                  }
+                )
               },
-              post {
-                entity(as[String]) { body =>
-                  dispatchProcess(body)
+              pathPrefix("update") {
+                pathEnd {
+                  put {
+                    entity(as[String]) { body =>
+                      dispatchUpdate(204, body)
+                    }
+                  }
                 }
               }
             )
@@ -383,30 +547,35 @@ class TestServiceBGatewayHandler(settings: GrpcClientSettings)(implicit sys: Cla
         }
       }
     }
-  }
 
-  private def dispatchGetRequest(parameters: Map[String, Seq[String]]) = {
+  private def dispatchGetRequest(statusCode: Int, parameters: Map[String, Seq[String]]) = {
     val input = Try {
       val requestId = parameters.toLongValue("requestId")
-      TestRequestB(requestId = requestId)
+      rest_gateway_test.api.model.TestRequestB(requestId = requestId)
     }
-    completeResponse(input, client.getRequest)
+    completeResponse(input, client.getRequest, statusCode)
   }
 
-  private def dispatchProcess(body: String) = {
-    val input = parseBody[TestRequestB](body)
-    completeResponse(input, client.process)
+  private def dispatchProcess(statusCode: Int, body: String) = {
+    val input = parseBody[rest_gateway_test.api.model.TestRequestB](body)
+    completeResponse(input, client.process, statusCode)
   }
 
+  private def dispatchUpdate(statusCode: Int, body: String) = {
+    val input = parseBody[rest_gateway_test.api.model.TestRequestB](body)
+    completeResponse(input, client.update, statusCode)
+  }
 }
 
 object TestServiceBGatewayHandler {
 
-  def apply(settings: GrpcClientSettings)(implicit sys: ClassicActorSystemProvider): GrpcGatewayHandler =
+  def apply(settings: GrpcClientSettings)(implicit sys: ClassicActorSystemProvider): GrpcGatewayHandler = {
     new TestServiceBGatewayHandler(settings)
+  }
 
-  def apply(clientName: String)(implicit sys: ClassicActorSystemProvider): GrpcGatewayHandler =
+  def apply(clientName: String)(implicit sys: ClassicActorSystemProvider): GrpcGatewayHandler = {
     TestServiceBGatewayHandler(GrpcClientSettings.fromConfig(clientName))
+  }
 }
 ----
 
